# alia

./: .gitignore  AGENTS.md  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
scripts/: alia-launch.sh  install-shortcut.sh
src/alia/: __init__.py  agent.py  app.py  host.py  hud.py  persona.py  policy.py  setup.py  voice.py
src/alia/static/: transcript.html
tests/: test_agent.py  test_policy.py
