[project]
# Distribution name (PyPI): "alia" is taken. The import package and the CLI
# command both stay `alia`.
name = "alia-ai"
version = "1.1.0"
description = "ALIA — the cognitive partner of the AI-n-Box desktop. A native GNOME agent surface on the lingo/lovelaice engine."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Alejandro Piad", email = "apiad@apiad.net" }]
dependencies = [
    # The agent runtime: sessions, persistence, tools, MCP, hooks. ALIA is a
    # consumer of lovelaice's ACP engine, not a re-implementation on bare lingo.
    "lovelaice>=2.1.0",
    "python-dotenv>=1.0",
    # Voice: local STT via harp's HarpSession, local TTS via Kokoro.
    # kokoro-onnx (onnxruntime) not kokoro (torch) — CPU-light, no 2GB torch.
    "harpio>=0.7.0",
    "kokoro-onnx>=0.4",
    "soundfile>=0.12",
]
# NOTE: PyGObject (the GTK4 binding) is NOT a pip dependency on purpose.
# It comes from the system (distro `python3-gobject` + GTK4), and the venv
# is created with --system-site-packages so it's visible. See the Makefile.

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[project.scripts]
alia = "alia.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
